--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -4,12 +4,18 @@ process {
             compressionArg = { (compression == "nowriter" ? "--no-writer-process" : "--compression ${compression}") }
         }
     }
+    $BwamethAlign {
+        ext {
+            readGroup = { "@RG\tID:${name}\tSM:${name}\tLB:${name}\tPL:ILLUMINA" }
+        }
+    }
 }
 
 profiles {
     local {
         params {
             threadCounts = [ 4 ]
+            alignThreads = 4
         }
         
         executor {
@@ -25,6 +31,7 @@ profiles {
     cluster {
         params {
             threadCounts = [ 4, 8, 16 ]
+            alignThreads = 16
         }
 
         executor {
