Move bwa and star images over to Phusion

--- a/paper/containers/tools/bwa/Dockerfile
+++ b/paper/containers/tools/bwa/Dockerfile
@@ -14,46 +14,50 @@
 #                   docker run --rm jdidion/bwabase python bwa-meth.py
 #################################################################
 # python3 Alpine image with gcc
-FROM python:alpine
+FROM phusion/baseimage:latest
 WORKDIR /tmp
 
-RUN apk add --update --no-cache ncurses
-RUN apk add --virtual=deps --update --no-cache \
-    musl-dev \
-    zlib-dev \
-    bzip2-dev \
-    xz-dev \
-    make \
-    gcc \
-    git
-RUN apk add --update ca-certificates openssl bash && \
-    update-ca-certificates
+ENV BUILD_PACKAGES \
+    build-essential \
+    g++ \
+    libbz2-dev \
+    zlib1g-dev \
+    liblzma-dev \
+    git \
+    wget
+ENV RUNTIME_PACKAGES \
+    libncurses5-dev \
+    libncursesw5-dev \
+    python3-pip \
+    time
+ENV BWA_VERSION 0.7.15
+ENV BWA_URL "https://github.com/lh3/bwa/releases/download/v${BWA_VERSION}/bwa-${BWA_VERSION}.tar.bz2"
+ENV SAMTOOLS_VERSION 1.4
+ENV SAMTOOLS_URL "https://github.com/samtools/samtools/releases/download/${SAMTOOLS_VERSION}/samtools-${SAMTOOLS_VERSION}.tar.bz2"
 
-### Install bwa
-ENV VERSION 0.7.15
-ENV URL "https://github.com/lh3/bwa/releases/download/v${VERSION}/bwa-${VERSION}.tar.bz2"
-RUN wget -q -O - $URL | tar -jxv && \
-    cd bwa-${VERSION} && \
-    sed -i '1i#include <stdint.h>' kthread.c && \
-    sed -i[.bak] "s/u_int32_t/uint32_t/g" *.c && \
-    sed -i[.bak] "s/u_int32_t/uint32_t/g" *.h && \
-    make && \
-    mv /tmp/bwa-${VERSION}/bwa /usr/local/bin
+RUN apt-get update && apt-get install --yes \
+        $BUILD_PACKAGES \
+        $RUNTIME_PACKAGES \
+    && ln -s /usr/bin/python3 /usr/bin/python \
+    && ln -s /usr/bin/pip3 /usr/bin/pip \
+    && wget -q -O - $BWA_URL | tar -jxv \
+    && cd bwa-${BWA_VERSION} \
+    && sed -i '1i#include <stdint.h>' kthread.c \
+    && sed -i[.bak] "s/u_int32_t/uint32_t/g" *.c \
+    && sed -i[.bak] "s/u_int32_t/uint32_t/g" *.h \
+    && make \
+    && mv /tmp/bwa-${BWA_VERSION}/bwa /usr/local/bin \
+    && cd .. \
+    && git clone --recursive https://github.com/brentp/bwa-meth \
+    && cd bwa-meth \
+    && python setup.py install \
+    && wget -q -O - $SAMTOOLS_URL | tar -jxv \
+    && cd samtools-${SAMTOOLS_VERSION} \
+    && ./configure --prefix=/usr/local/ --without-curses \
+    && make \
+    && make install \
+    && rm -Rf /tmp/samtools-${SAMTOOLS_VERSION}
 
-# Install bwa-meth
-RUN git clone --recursive https://github.com/brentp/bwa-meth && \
-    cd bwa-meth && \
-    python setup.py install
-
-# Install samtools
-ENV VERSION 1.4
-ENV URL "https://github.com/samtools/samtools/releases/download/1.4/samtools-${VERSION}.tar.bz2"
-RUN wget -q -O - $URL | tar -jxv && \
-    cd samtools-${VERSION} && \
-    ./configure --prefix=/usr/local/ --without-curses && \
-    make && \
-    make install && \
-    rm -Rf /tmp/samtools-${VERSION}
-
-RUN rm -rf /var/cache/apk/* /tmp/* && \
-    apk del deps
+RUN apt-get remove --purge -y $BUILD_PACKAGES \
+    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /tmp/*
