record machine info; plotting bugfixes

--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -29,6 +29,10 @@ profiles {
     }
 
     cluster {
+        process {
+            beforeScript = "module load singularity"
+        }
+        
         params {
             threadCounts = [ 4, 8, 16 ]
             alignThreads = 16
