update workflow scripts

--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -16,6 +16,7 @@ profiles {
         params {
             threadCounts = [ 4 ]
             alignThreads = 4
+            resultsDir = "results"
         }
         
         executor {
@@ -36,6 +37,7 @@ profiles {
         params {
             threadCounts = [ 4, 8, 16 ]
             alignThreads = 16
+            resultsDir = "$HOME/results"
         }
 
         executor {
