transition data containers to progrium/busybox

--- a/paper/containers/data/hg37/reference/Dockerfile
+++ b/paper/containers/data/hg37/reference/Dockerfile
@@ -4,8 +4,9 @@
 # Provides:         /data/reference/hg37/hg37.fa|/data/reference/hg37/hg37.fa.fai
 # Base Image:       busybox
 #################################################################
-FROM busybox
-RUN mkdir -p /data/reference/hg37 \
+FROM progrium/busybox
+RUN opkg-install bash \
+ && mkdir -p /data/reference/hg37 \
  && mkdir -p /data/annotations/hg37
 ADD hg37.fa /data/reference/hg37/hg37.fa
 ADD hg37.fa.fai /data/reference/hg37/hg37.fa.fai
