--- a/paper/containers/data/hg38/reference/Dockerfile
+++ b/paper/containers/data/hg38/reference/Dockerfile
@@ -4,8 +4,9 @@
 # Provides:         /data/reference/ng38/hg38.fa|/data/reference/hg38/hg38.fa.fai
 # Base Image:       busybox
 #################################################################
-FROM busybox
-RUN mkdir -p /data/reference/hg38 \
+FROM progrium/busybox
+RUN opkg-install bash \
+ && mkdir -p /data/reference/hg38 \
  && mkdir -p /data/annotations/hg38
 ADD hg38.fa /data/reference/hg38/hg38.fa
 ADD hg38.fa.fai /data/reference/hg38/hg38.fa.fai
