change cluster config to slum; update workflow docs

--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -41,12 +41,13 @@ profiles {
         }
 
         executor {
-            name = 'sge'
+            name = 'slurm'
             queueSize = 1
         }
 
         singularity {
             enabled = true
+            autoMounts = true
         }
     }
 }
