support switching between docker repo names and absolute singularity image paths

--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -38,6 +38,8 @@ profiles {
             threadCounts = [ 4, 8, 16 ]
             alignThreads = 16
             resultsDir = "$HOME/results"
+            containerPrefix = "/scratch/"
+            containerSuffix = ".img"
         }
 
         executor {
