fix up working directory on cluster before running container

--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -31,7 +31,7 @@ profiles {
 
     cluster {
         process {
-            beforeScript = "module load singularity"
+            beforeScript = "module load singularity ; cd ${PWD/\\/spin1\\/home\\/linux/\\/home}"
         }
         
         params {
@@ -49,7 +49,6 @@ profiles {
 
         singularity {
             enabled = true
-            autoMounts = true
         }
     }
 }
