--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -31,7 +31,7 @@ profiles {
 
     cluster {
         process {
-            beforeScript = "module load singularity ; cd ${PWD/\\/spin1\\/home\\/linux/\\/home}"
+            beforeScript = 'module load singularity ; cd ${PWD/\\/spin1/}'
         }
         
         params {
@@ -49,6 +49,7 @@ profiles {
 
         singularity {
             enabled = true
+            runOptions = "-B /scratch:/scratch"
         }
     }
 }
