add missing files to workflow archive; turn on workflow caching; include untrimmed reads in pivot tables in show_wgbs_effectiveness.py

--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -1,4 +1,6 @@
 process {
+    cache = true
+    
     $Atropos {
         ext {
             compressionArg = { (compression == "nowriter" ? "--no-writer-process" : "--compression ${compression}") }
