Use slurm sacct to determine job memory usage

--- a/paper/workflow/nextflow.config
+++ b/paper/workflow/nextflow.config
@@ -33,7 +33,7 @@ profiles {
 
     cluster {
         process {
-            beforeScript = 'module load singularity ; cd ${PWD/\\/spin1/}'
+            beforeScript = 'echo "$SLURM_JOB_ID" > .jobid ; module load singularity ; cd ${PWD/\\/spin1/}'
         }
         
         params {
@@ -42,6 +42,9 @@ profiles {
             resultsDir = "$HOME/results"
             containerPrefix = "/scratch/"
             containerSuffix = ".img"
+            summarizeJobScript = "summarize_slurm_job.sh"
+            parseJobScript = "parse_slurm_job.py"
+            jobMemoryMetric = "MaxVMSize"
         }
 
         executor {
@@ -55,3 +58,4 @@ profiles {
         }
     }
 }
+
