Update tool versions; add pointer to Atropos version associated with published version of paper; add new tools

--- a/paper/containers/tools/cutadapt/Dockerfile
+++ b/paper/containers/tools/cutadapt/Dockerfile
@@ -1,19 +1,19 @@
 #################################################################
 # Dockerfile
 #
-# Software:         Atropos
-# Software Version: 1.1.17
-# Description:      Atropos image for paper
-# Website:          https://github.com/jdidion/atropos
-# Provides:         atropos
+# Software:         Cutadapt
+# Software Version: 1.16
+# Description:      Cutadapt trimming software
+# Website:          https://github.com/marcelm/cutadapt
+# Provides:         cutadapt
 # Base Image:       phusion/baseimage:latest
-# Build Cmd:        docker build -f Dockerfile -t jdidion/atropos_paper:latest .
-# Pull Cmd:         docker pull jdidion/atropos_paper
-# Run Cmd:          docker run --rm jdidion/atropos_paper atropos -h
+# Build Cmd:        docker build -f Dockerfile -t jdidion/cutadapt:latest .
+# Pull Cmd:         docker pull jdidion/cutadapt
+# Run Cmd:          docker run --rm jdidion/cutadapt cutadapt -h
 #################################################################
 FROM phusion/baseimage:latest
 WORKDIR /tmp
-ENV VERSION 1.1.17
+ENV VERSION v1.16
 ENV BUILD_PACKAGES \
     git
 ENV RUNTIME_PACKAGES \
@@ -27,9 +27,10 @@ RUN apt-get update \
     && ln -s /usr/bin/python3 /usr/bin/python \
     && ln -s /usr/bin/pip3 /usr/bin/pip \
     && pip install cython \
-    && git clone --recursive --branch $VERSION https://github.com/jdidion/atropos \
-    && cd atropos \
-    && make install \
+    && git clone --recursive --branch $VERSION https://github.com/marcelm/cutadapt \
+    && cd cutadapt \
+    && python setup.py install \
+    && python setup.py build_ext -i \
     && cd ..\
     && apt-get remove --purge -y $BUILD_PACKAGES \
     && apt-get autoremove -y \
