--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,8 @@ cache:
   directories:
   - "$HOME/.cache/pip"
 python:
-- 3.3
-- 3.4.3
-- 3.5
 - 3.6
-#- "3.7-dev"
+- "3.7-dev"
 install:
 - pip install --upgrade pip wheel
 - pip install Cython
