--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ python:
 - 3.4.3
 - 3.5
 - 3.6
-- 3.7
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 install:
 - pip install --upgrade pip wheel
 - pip install Cython
