--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,6 @@
 [metadata]
 description-file = README
 
-[versioneer]
-VCS = git
-style = pep440
-versionfile_source = atropos/_version.py
-versionfile_build = atropos/_version.py
-tag_prefix =
-parentdir_prefix = atropos-
+[options]
+setup_requires =
+  setuptools_scm
