--- a/requirements-extra.txt
+++ b/requirements-extra.txt
@@ -1,7 +1,15 @@
-pysam-0.15.3
-tqdm-4.40.2
-khmer-2.1.1
-bz2file-0.98
-screed-1.0.1
-jinja2-2.10.3
-MarkupSafe-1.1.1
+pysam==0.15.3
+tqdm==4.40.2
+khmer==2.1.1
+bz2file==0.98
+screed==1.0.1
+jinja2==2.10.3
+MarkupSafe==1.1.1
+ngstream>=0.2.1
+pysam==0.15.3
+subby==0.1.7
+requests==2.22.0
+certifi==2019.11.28
+chardet==3.0.4
+idna==2.8
+urllib3==1.25.7
